And fix integrations page double scrollbar

--- a/sass/homeassistant/_overrides.scss
+++ b/sass/homeassistant/_overrides.scss
@@ -620,7 +620,7 @@ article.page,
 article.listing {
   font-size: 1.125em;
   line-height: 1.6;
-  overflow-x: hidden;
+  overflow: hidden;
 
   img,
   table {
